# cacoca

./: .gitignore  .gitmodules  README.md  cacoca.py  main.py  plot_slides.py  plot_slides_polymers.py  plot_slides_posted.py  pyproject.toml  stacked_bars_Scrap0_DRI100.csv  stacked_bars_Scrap100_DRI0.csv  stacked_bars_Scrap50_DRI50.csv  stacked_bars_multi_3_projects_ref_Scrap0_DRI100.csv
cacoca/: run.py
cacoca/calc/: auction.py  calc_auction_quantities.py  calc_cost_and_emissions.py  calc_derived_quantities.py
cacoca/output/: plot_absolute_hydrogen_demand.py  plot_price_scenarios.py  plot_project_cost_time_curves.py  plot_stacked_bars.py  plot_tools.py
cacoca/setup/: read_input.py  select_scenario_data.py  setup.py
cacoca/tools/: common_merges.py  sensitivities.py  tools.py
config/: .gitignore  ProjectsViewer.xlsm  config.yml  config_posted.yml  config_slides.yml  config_slides_polymers.yml  config_test.yml  projects.csv  projects_polymers.csv  projects_posted.csv  projects_test.csv
data/isi/: techparam_unsensitive.csv
data/scripts/: scenario_data_converter.py  techparam_CAPEX_converter.py  techparam_converter.py
doc/: 000_introduction.md  100_getting_started.md  200_functionality_and_parameters.md  300_modifying_input_data.md  400_code_structure.md  README.md
posted_coupling/: cacoca_posted_coupling.py  generate_cacoca_input_data.py
scripts/: generate_config.py  get_dropdown_options.py  input_viewer.xlsm  interpolate_price_curve.py
scripts/data/: scenario_data_converter.py  techparam_CAPEX_converter.py
src/calc/: auction.py  calc_auction_quantities.py  calc_cost_and_emissions.py  calc_derived_quantities.py
(+77 files in other folders)
